# ggml-rs

./: Cargo.toml  DEPENDENCY_FIX.md  DEPENDENT_CRATES_GUIDE.md  GGML_SYS_SETUP.md  USAGE.md  VERIFICATION_CHECKLIST.md  build.rs  verify_build.rs  wrapper.h
ggml/: CMakeLists.txt  ggml.pc.in
ggml/src/: CMakeLists.txt
src/: lib.rs
