[package]
name = "ggml-rs"
version = "0.1.1"
edition = "2021"
description = "Rust FFI bindings for GGML (shared library)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshatdia/ggml-rs.git"
links = "ggml_dual"  # Unique name to prevent multiple native builds racing

[features]
default = []
metal = []
cuda = []
vulkan = []
openblas = []
openmp = []
hipblas = []
intel-sycl = []
# Namespace features - only one should be enabled per dependent crate
namespace-llama = []
namespace-whisper = []

[build-dependencies]
cmake = "0.1"
bindgen = "0.71"
cc = { version = "1.0", features = ["parallel"] }
regex-automata = "0.4"

[dependencies]

[[bin]]
name = "verify_build"
path = "verify_build.rs"

